# pos

./: .env.example  .eslintrc.json  .gitignore  .pylintrc  ACCOUNTING_SETUP_INSTRUCTIONS.md  ACCOUNTING_SYSTEM_DOCUMENTATION.md  ACCOUNTING_SYSTEM_SUMMARY.md  AUTOMATIC_METADATA_README.md  AZURE_FACE_API_IMPLEMENTATION_SUMMARY.md  AZURE_FACE_API_QUICK_START.md  AZURE_FACE_API_SETUP.md  BARCODE_SCANNING_README.md  CALENDAR_INTEGRATION_README.md  COLLABORATION_GUIDE.md  COMPLETE_SETUP_GUIDE.md  CUSTOMER_DISPLAY_README.md  DATABASE_CONSOLIDATION.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_SETUP.md  FRONTEND_UPDATE.md  HYBRID_CATEGORIZATION_README.md  IMAGE_MATCHING_README.md  IMPLEMENTATION_SUMMARY.md  INSTALL_DEPENDENCIES.md  INSTALL_NOW.md  METADATA_EXTRACTION_README.md  METADATA_QUICK_START.md  MIGRATION_AND_TEST_RESULTS.md  MIGRATION_COMPLETE.md  PRIVACY_POLICY.docx  PRIVACY_POLICY.md  PROJECT_STRUCTURE.md  QUICK_SETUP_NEW_COMPUTER.md  QUICK_START.md  RBAC_README.md  README.md  README_DATABASE_SYNC.md  README_SETUP.md  RUN_THIS_NOW.md  SCHEDULE_SYSTEM_README.md  (+130 more)
backend/: __init__.py
cench-realwebsite/: package-lock.json  package.json
database/: README.md
docs/: ADMIN_PIN_SETUP.md  API_ACCOUNTS.md  API_TRANSACTIONS.md  BARCODE_SCANNING_README.md  CASH_REGISTER_CONTROL_README.md  CLERK_SETUP.md  DOORDASH_RETAIL.md  DOORDASH_RETAIL_CATALOG_ATTRIBUTES.md  DOORDASH_RETAIL_ONBOARDING.md  DOORDASH_RETAIL_REPORTS.md  DOORDASH_RX_DEEPLINK.md  DOORDASH_SETUP.md  GOOGLE_MAPS_SETUP.md  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+346 files in other folders)
